<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">



        <!--
        <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

          <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            app:menu="@menu/my_navigation_items" />
    </androidx.drawerlayout.widget.DrawerLayout>

        Your contents -->





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destination_search"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:hint="@string/search_hint"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"

            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/destination_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/destination_search"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/search"
            android:textSize="12sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/destination_search"
            app:layout_constraintStart_toEndOf="@+id/destination_search"
            app:layout_constraintTop_toTopOf="@+id/destination_search" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/destination_search"
            android:layout_marginTop="40dp"
            android:layout_marginStart="8dp"/>



        <TextView
            android:id="@+id/State_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            android:layout_marginStart="16dp"
            android:text="State Tourism"
            android:textStyle="bold"
            android:textColor="#DD1D3132"
            android:textSize="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/State_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/service1"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/service2"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/service_button1"
            app:layout_constraintStart_toEndOf="@+id/service_button1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/service3"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/service_button2"
            app:layout_constraintStart_toEndOf="@+id/service_button2"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
